# hydraulic-diagnostic-saas

./: .bandit  .cleanup-legacy-admin-files.txt  .docker-trigger  .dockerignore  .editorconfig  .env  .env.dev.example  .env.example  .env.prod.example  .eslintrc.json  .flake8  .frontend.gitignore  .gitignore  .isort.cfg  .pre-commit-config.yaml  .sourcery.yaml  CURRENT_STATUS.md  DEVELOPMENT_QUICKSTART.md  DOCKER_DEPLOYMENT.md  DOCKER_QUICK_FIX.md  DOCS_APP_DEPLOYMENT.md  DoD_CHECKLISTS.md  Dockerfile  Dockerfile.light  ERROR_FIXES_SUMMARY.md  FIXES_SUMMARY.md  IMPLEMENTATION_PLAN.md  INSTALLATION_GUIDE.md  Makefile  Makefile.docker  PRECOMMIT_FIXES_COMPLETED.md  QUICK_REBUILD.md  README.md  README_SELF_SERVICE.md  ROADMAP_INCREMENTAL.md  RUN_PRECOMMIT_TESTS.md  TESTING.md  WINDOWS_QUICKFIX.md  WINDOWS_SETUP.md  __batch_edit_placeholder__  (+58 more)
ml_service/: .env.example  Dockerfile  Makefile  ONNX_QUICKSTART.md  README.md  REAL_DATA_TRAINING.md  cleanup.sh  config.py  docker-compose.yml  main.py  make_uci_dataset.py  onnx_predict.py  pyproject.toml  requirements.txt  retrain_xgboost.py  simple_predict.py  train_production_models.py  train_real_production_models.py  train_real_production_models_gpu.py  validate_setup.py
ml_service/api/: auth.py  routes.py  schemas.py
ml_service/data/: README_RAW.md  uci_loader.py  uci_raw_loader.py
ml_service/deploy/: docker-compose.production.yml
ml_service/docker/: Dockerfile
ml_service/experiments/ssl_transformer/: dataset.py  extract_component_data.py  train_physics_informed.py
ml_service/models/: __init__.py  adaptive_model.py  base_model.py  catboost_model.py  ensemble.py  ensemble_training_summary.json  helm_model.py  random_forest_model.py  xgboost_model.py
ml_service/models/v20251105_0011/: two_stage_summary.json
ml_service/reports/: model_test_results.json  uci_test_report.json
ml_service/scripts/: fetch_uci_hydraulic.py  generate_training_data.py  push_to_api.py  test_models.py  train_industrial_iot.py  train_production_models.py  train_two_stage_contracted.py
ml_service/scripts/onnx/: __init__.py
ml_service/scripts/test/: quick_test.py  validate_setup.py
ml_service/scripts/train/: train_production.py
ml_service/services/: __init__.py  adaptive_threshold_service.py  cache_service.py  feature_cache_mixin.py  feature_engineering.py  health_check.py  monitoring.py  two_stage_classifier.py
ml_service/services/utils/: features.py
ml_service/src/: config.py
ml_service/tests/integration/: test_data_loader.py
services/backend/: .env.example  .pre-commit-config.yaml  .ruffignore  ADMIN_SETUP.md  CHANGELOG.md  CHANGELOG_FRIENDLY_UX.md  DJANGO_ADMIN_SETUP_CHECKLIST.md  Dockerfile  FIXES_SUMMARY.md  FRIENDLY_ADMIN_GUIDE.md  FRIENDLY_UX_IMPLEMENTATION.md  METALLIC_ADMIN_THEME.md  PROFESSIONAL_ADMIN_GUIDE.md  README.md  RESTYLE_CHANGELOG.md  RUFF_FIXES.md  UNFOLD_SETUP.md  apply_all_fixes.py  check_admin.py  cleanup_staticfiles.sh  fix_classvar_imports.py  fix_ruff_errors.py  pyproject.toml  pytest.ini  register_all_models.py  requirements.txt
services/backend/config/: __init__.py  admin.py  asgi.py  celery.py  pagination.py  sensor_validation.py  sentry_setup.py  settings.py  settings.rag_service.py.insert  settings_update.py  urls.py  urls_docs_integration.py  wsgi.py
services/backend/diagnostics/: MODELS_OPTIMIZATION.md  TIMESCALE_SENSORDATA_README.md  admin.py  admin_quarantine.py  ai_engine.py  api_predict.py  api_urls_ingest.py  api_urls_predict.py  models_ingestion.py  rag_system.py  serializers_ingest.py  tasks_ingest.py  timescale_tasks.py
services/backend/docs/: openapi_v3.1.yaml
services/backend/equipment/: urls.py
services/backend/project/: celery_schedules.py
services/backend/rag_assistant/: apps.py  middleware.py  rag_service.py  serializers.py  signals.py  views.py
services/backend/requirements/: base.txt  dev.txt
services/backend/sensors/: models.py
services/backend/services/: __init__.py  ml_client.py  rag_client.py
services/backend/tasks/: inference.py
services/backend/tests/: test_models.py  test_smoke_xfail.py
services/backend/users/: serializers_change_password.py
services/gnn_service/: .coveragerc  .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLEANUP_SUMMARY.md  CLEANUP_V2_COMPLETE.md  CONTRIBUTING.md  Dockerfile  Dockerfile.dev  Dockerfile.production  IMPLEMENTATION_GUIDE.md  ISSUE_95_CHECKLIST.md  MIGRATION_SUMMARY.md  PRODUCTION_READINESS.md  README.friendly-test.md  README.md  README_UNIVERSAL.md  README_V3.md  SETUP_VALIDATION.md  STRUCTURE.md  TESTING.md  TESTING_ROADMAP.md  UNIVERSAL_GNN_PROGRESS.md  __init__.py  admin_endpoints.py  admin_test_inference.py  analyze_data_v3.py  benchmark.py  benchmark_optimizations.py  check_data.py  check_gpu.py  config.py  config_v3.py  dataset.py  dataset.py.bak  dataset_dynamic.py  dataset_v2.py  db_client.py  (+40 more)
services/gnn_service/_deprecated/: README.md
services/gnn_service/_legacy/: README.md  README_LEGACY.md  dataset_dynamic_stub.py  feature_engineering_stub.py  graph_builder_stub.py  inference_dynamic_old.py  inference_service.py  model_dynamic_gnn_stub.py  model_universal_temporal.py  post_processor_stub.py  schemas_stub.py  train_dynamic_old.py
services/gnn_service/api/: __init__.py  main.py  middleware.py
services/gnn_service/app/: __init__.py  inference_mock.py  main.py  schemas.py
services/gnn_service/configs/: config.py  topology_templates.json
services/gnn_service/core/: config.py  exceptions.py
services/gnn_service/data/: README.md  edge_specifications.json  equipment_metadata.json  equipment_metadata_full.json
services/gnn_service/db/: manager.py
services/gnn_service/demo/: systems.py
services/gnn_service/docs/: API_DOCS.md  DOCKER.md  INFERENCE.md  MODEL_CONTRACT.md  TRAINING.md
services/gnn_service/examples/: README.md  example_inference.py
services/gnn_service/inference/: engine.py
services/gnn_service/kubernetes/: deployment.yaml  hpa.yaml
services/gnn_service/models/: README.md  lightweight_gnn.py  optimized_gnn.py
services/gnn_service/src/: __init__.py
(+1510 files in other folders)
