[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hydraulic-ml-service"
version = "1.0.0"
description = "Enterprise ML inference service for hydraulic systems diagnostics"
authors = [
    {name = "Hydraulic Diagnostics Team", email = "team@hydraulic-diagnostics.com"}
]
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.104.1",
    "uvicorn[standard]>=0.24.0", 
    "scikit-learn>=1.3.2",
    "xgboost>=2.0.2",
    "numpy>=1.24.4",
    "pandas>=2.1.4",
    "redis>=5.0.1",
    "prometheus-client>=0.19.0",
    "structlog>=23.2.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.3",
    "pytest-asyncio>=0.21.1",
    "httpx>=0.25.2",
    "ruff>=0.14.3",
    "mypy>=1.7.1"
]

[tool.setuptools.packages.find]
where = ["."]  
include = ["*"]

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "DTZ", "PTH", "ARG"]
ignore = ["RUF001", "RUF002", "RUF003", "E501"]

[tool.ruff.lint.per-file-ignores]
"ml_service/api/*.py" = ["B008"]
"tests/*" = ["ARG001", "ARG002"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra -q --strict-markers"
testpaths = ["tests"]
asyncio_mode = "auto"
markers = [
    "slow: marks tests as slow",
    "integration: marks tests as integration tests",
    "performance: marks tests as performance benchmarks"
]
