[project]
name = "hydraulic-diagnostic-backend"
version = "0.1.0"
description = "Django Admin Panel for Hydraulic Diagnostics SaaS"
requires-python = ">=3.14"
readme = "README.md"
authors = [
    {name = "Plotnikov Aleksandr", email = "shukik85@ya.ru"}
]

dependencies = [
    "Django>=4.2.7",
    "psycopg2-binary>=2.9.9",
    "celery>=5.3.4",
    "django-celery-beat>=2.5.0",
    "django-celery-results>=2.6.0",
    "redis>=5.0.1",
    "gunicorn>=21.2.0",
    "django-anymail[sendgrid]>=10.2",
    "stripe>=7.4.0",
    "python-dotenv>=1.0.0",
    "Pillow>=10.1.0",
    "structlog>=24.1.0",
]

[project.optional-dependencies]
dev = [
    "mypy>=1.11.0",
    "ruff>=0.6.0",
    "django-stubs>=5.1.0",
    "types-redis>=4.6.0",
    "types-pillow>=10.1.0",
    "pre-commit>=3.8.0",
    "django-silk>=5.1.0",
    "bandit>=1.7.9",
    "safety>=3.2.0",
]

test = [
    "pytest>=8.3.0",
    "pytest-django>=4.9.0",
    "pytest-cov>=5.0.0",
    "pytest-asyncio>=0.24.0",
    "factory-boy>=3.3.0",
    "faker>=28.0.0",
]

[build-system]
requires = ["setuptools>=70.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.ruff]
target-version = "py314"
line-length = 100

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
    "ARG", # flake8-unused-arguments
    "SIM", # flake8-simplify
    "TCH", # flake8-type-checking
]
ignore = [
    "E501",  # line too long (handled by formatter)
    "B008",  # do not perform function calls in argument defaults
    "B904",  # raise from None
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]  # unused imports
"*/migrations/*.py" = ["E501", "F401", "F811"]  # migrations can be long
"*/tests/*.py" = ["ARG", "SIM"]  # test files can have unused args

[tool.ruff.lint.isort]
known-first-party = ["apps", "config"]

[tool.mypy]
python_version = "3.14"
strict = true
warn_return_any = true
warn_unused_configs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
check_untyped_defs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
disallow_untyped_calls = false  # Django models have untyped calls
show_error_codes = true

plugins = ["mypy_django_plugin.main"]

[tool.django-stubs]
django_settings_module = "config.settings"

[[tool.mypy.overrides]]
module = [
    "celery.*",
    "stripe.*",
    "anymail.*",
    "django_celery_beat.*",
    "django_celery_results.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "config.settings"
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--strict-markers",
    "--cov=apps",
    "--cov-report=html",
    "--cov-report=term-missing",
    "--cov-fail-under=80",
]
testpaths = ["tests"]

[tool.coverage.run]
source = ["apps"]
omit = [
    "*/migrations/*",
    "*/tests/*",
    "*/__init__.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "@abstractmethod",
]
